ajustes de links e de imagem para mobile

--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
             <p class="apresentacao_conteudo_texto">Neste espaço, compartilho minha jornada no universo da programação, desde minhas experiências até dicas valiosas e projetos inspiradores. Sinta-se à vontade para explorar e mergulhar no fascinante mundo da tecnologia ao meu lado!</p>
             <div class="botoes">
                 <h2 class="apresentacao_conteudo_links">Acesse minhas redes: </h2>
-                <a class="apresentacao_botoes" href="">
+                <a class="apresentacao_botoes" href="https://github.com/jp-avr">
                     <img src="./assets/GitHub.png" alt="ícone do GitHub">
                     GitHub
                 </a>
-                <a class="apresentacao_botoes" href="">
+                <a class="apresentacao_botoes" href="https://www.linkedin.com/in/joao-pedro-veras/">
                     <img src="./assets/Linkedin.png" alt="ícone do Linkedin">
                     Linkedin
                 </a>
