ajeitando os styles

--- a/projetos.html
+++ b/projetos.html
@@ -29,7 +29,8 @@
             <h1 class="apresentacao_conteudo_titulo">
                 Meus <span class="titulo_destaque">Projetos</span>
             </h1>
-            <p class="apresentacao_conteudo_texto">Vivamus urna nisi, lobortis ut euismod in, sollicitudin ac ipsum. Mauris a libero id velit pulvinar scelerisque at quis magna. Aliquam erat volutpat.</p>
+            <p class="apresentacao_conteudo_texto">Bem-vindo à galeria dos meus projetos!</p>
+            <p class="apresentacao_conteudo_texto">Sinta-se à vontade para explorar cada projeto. Para mais detalhes sobre o processo de desenvolvimento, tecnologias utilizadas e os desafios enfrentados, clique em cada um dos itens abaixo. Espero que essas criações despertem sua curiosidade e inspirem você a mergulhar mais fundo no vasto mundo da programação.</p>
             <div class="apresentacao_conteudo_imagens">
                 <div class="apresentacao_conteudo_links">
                     <div class="retangulo_rosa"></div>
