ajustando as divs para ficarem juntas

--- a/index.html
+++ b/index.html
@@ -45,8 +45,10 @@
             </div>
         </section>
         <div class="div_da_imagem">
-            <div class="quadrado_rosa"></div>
-            <img class="imagem_foto" src="./assets/Eu.jpg" alt="Foto da pessoa">
+            <div class="container">
+                <div class="quadrado_rosa"></div>
+                <img class="imagem_foto" src="./assets/Eu.jpg" alt="Foto da pessoa">
+            </div>
         </div>
         <!-- <img class="imagem_foto" src="./assets/Group 16.png" alt=""> -->
     </main>
