--- a/habilidades.html
+++ b/habilidades.html
@@ -29,8 +29,10 @@
             <h1 class="apresentacao_conteudo_titulo">
                 Minhas <span class="titulo_destaque">Habilidades</span>
             </h1>
-            <p class="apresentacao_conteudo_texto">Vivamus urna nisi, lobortis ut euismod in, sollicitudin ac ipsum. Mauris a libero id velit pulvinar scelerisque at quis magna. Aliquam erat volutpat.</p>
-            <p class="apresentacao_conteudo_texto">Vivamus urna nisi, lobortis ut euismod in, sollicitudin ac ipsum. Mauris a libero id velit pulvinar scelerisque at quis magna. Aliquam erat volutpat.</p>
+            <p class="apresentacao_conteudo_texto"><strong class="titulo_destaque">JavaScript & TypeScript:</strong> Domínio completo dessas linguagens para criar interações dinâmicas e responsivas.</p>
+            <p class="apresentacao_conteudo_texto"><strong class="titulo_destaque">Vue.js & React:</strong> Experiência sólida na construção de interfaces modernas e escaláveis usando Vue.js e React.</p>
+            <p class="apresentacao_conteudo_texto"><strong class="titulo_destaque">HTML & CSS:</strong> Proficiência em traduzir designs complexos em interfaces elegantes e funcionais.</p>
+            <p class="apresentacao_conteudo_texto"><strong class="titulo_destaque">PHP:</strong> Capacidade de desenvolver sistemas back-end robustos e seguros para alimentar funcionalidades essenciais de uma aplicação web.</p>
             <div class="botoes">
                 <a class="apresentacao_botoes" href="">
                     <img src="./assets/Certificados.png" alt="ícone dos Certificados">
